[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["tidy"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "pytest.mark.skip",
    "@(typing\\.)?overload",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 100

[tool.poetry]
name = "git-tidy"
packages = [
  { include = "tidy" }
]
exclude = [
  "*/tests/"
]
version = "1.2.2"
description = "Tidy git commit messages, linting, and logging"
authors = ["Wes Kendall", "Tómas Árni Jónasson"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/Opus10/git-tidy"
repository = "https://github.com/Opus10/git-tidy"
documentation = "https://git-tidy.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
click = ">7.0"
formaldict = ">0.2.0"
jinja2 = ">2.10.3"
packaging = ">20.0"
python-dateutil = ">2.8.1"
pyyaml = ">=5.1.2,<=5.3.1"
requests = ">2.22.0"

[tool.poetry.dev-dependencies]
pytest = "8.3.2"
pytest-cov = "5.0.0"
pytest-dotenv = "0.5.2"
pytest-mock = "3.14.0"
pytest-responses = "0.5.0"
tox = "4.18.0"
ruff = "0.6.2"
pyright = "1.1.377"
mkdocs = "1.6.0"
black = "24.8.0"
mkdocs-material = "9.5.33"
mkdocstrings-python = "1.10.8"
footing = "*"
setuptools = "*"
poetry-core = "*"
typing-extensions = "4.12.2"

[tool.poetry.scripts]
git-tidy = 'tidy.cli:tidy'
git-tidy-commit = 'tidy.cli:commit'
git-tidy-lint = 'tidy.cli:lint'
git-tidy-log = 'tidy.cli:log'
git-tidy-squash = 'tidy.cli:squash'

[tool.pytest.ini_options]
xfail_strict = true
testpaths = "tidy/tests"
norecursedirs = ".venv"

[tool.ruff]
lint.select = ["E", "F", "B", "I", "G", "C4"]
line-length = 99
target-version = "py38"

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/migrations/**",
    "**/tests/**",
]
pythonVersion = "3.8"
typeCheckingMode = "standard"
