[build-system]
requires = ["poetry_core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["tidy"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "pytest.mark.skip",
    "@(typing\\.)?overload",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 100

[tool.poetry]
name = "git-tidy"
packages = [
  { include = "tidy" }
]
exclude = [
  "*/tests/"
]
version = "1.3.0"
description = "Tidy git commit messages, linting, and logging"
authors = ["Wes Kendall", "Tómas Árni Jónasson"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/Opus10/git-tidy"
repository = "https://github.com/Opus10/git-tidy"
documentation = "https://git-tidy.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.9.0,<4"
click = ">7.0"
formaldict = ">0.2.0"
jinja2 = ">2.10.3"
packaging = ">20.0"
python-dateutil = ">2.8.1"
pyyaml = ">=5.1.2,<=5.3.1"
requests = ">2.22.0"

[tool.poetry.dev-dependencies]
pytest = "8.3.3"
pytest-cov = "5.0.0"
pytest-dotenv = "0.5.2"
pytest-mock = "3.14.0"
pytest-responses = "0.5.0"
tox = "4.23.2"
ruff = "0.7.1"
pyright = "1.1.386"
mkdocs = "1.6.1"
black = "24.10.0"
mkdocs-material = "9.5.42"
mkdocstrings-python = "1.12.2"
footing = "*"
setuptools = "*"
poetry-core = "1.9.1"
cleo = "2.1.0"
poetry-plugin-export = "1.8.0"
typing-extensions = "4.12.2"

[tool.poetry.scripts]
git-tidy = 'tidy.cli:tidy'
git-tidy-commit = 'tidy.cli:commit'
git-tidy-lint = 'tidy.cli:lint'
git-tidy-log = 'tidy.cli:log'
git-tidy-squash = 'tidy.cli:squash'

[tool.pytest.ini_options]
xfail_strict = true
testpaths = "tidy/tests"
norecursedirs = ".venv"

[tool.ruff]
lint.select = ["E", "F", "B", "I", "G", "C4"]
line-length = 99
target-version = "py39"

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/migrations/**",
    "**/tests/**",
]
pythonVersion = "3.9"
typeCheckingMode = "standard"
